[package]
name = "friend-zoner"
version = "1.0.0"
edition = "2018"

[dependencies]
serenity = { version = "0.11.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "unstable_discord_api"] }
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
strum = "0.21"
strum_macros = "0.21"
tracing = "0.1"
tracing-subscriber = "0.2"
futures = "0.3"
rand = "0.8"
dotenv = "0.15.0"
